# Debugger

./: CMakeLists.txt  README.md  build.sh  build_client.sh  build_server.sh  main.cpp  run.sh
debugger-client/: build.gradle.kts
debugger_client/: build.gradle.kts
debugger_client/src/main/kotlin/: Main.kt
debugger_server/: CMakeLists.txt  main.cpp
examples/: hello  simple
kotlin/: Main.kt  build.gradle.kts
